@@ -29,12 +29,10 @@ import org.elasticsearch.xpack.ml.MachineLearning;
 import org.elasticsearch.xpack.ml.autoscaling.NativeMemoryCapacity;
 
 import java.net.InetAddress;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.OptionalLong;
 import java.util.Set;
 import java.util.function.BiConsumer;
 
@@ -45,7 +43,8 @@ import static org.elasticsearch.xpack.ml.MachineLearning.MAX_LAZY_ML_NODES;
 import static org.elasticsearch.xpack.ml.MachineLearning.MAX_MACHINE_MEMORY_PERCENT;
 import static org.elasticsearch.xpack.ml.MachineLearning.MAX_ML_NODE_SIZE;
 import static org.elasticsearch.xpack.ml.MachineLearning.USE_AUTO_MACHINE_MEMORY_PERCENT;
-import static org.elasticsearch.xpack.ml.autoscaling.MlAutoscalingDeciderServiceTests.AUTO_NODE_TIERS;
+import static org.elasticsearch.xpack.ml.autoscaling.MlAutoscalingDeciderServiceTests.AUTO_NODE_TIERS_NO_MONITORING;
+import static org.elasticsearch.xpack.ml.autoscaling.MlAutoscalingDeciderServiceTests.AUTO_NODE_TIERS_WITH_MONITORING;
 import static org.elasticsearch.xpack.ml.utils.NativeMemoryCalculator.MINIMUM_AUTOMATIC_NODE_SIZE;
 import static org.elasticsearch.xpack.ml.utils.NativeMemoryCalculator.dynamicallyCalculateJvmSizeFromNodeSize;
 import static org.hamcrest.Matchers.equalTo;
@@ -73,11 +72,11 @@ public class NativeMemoryCalculatorTests extends ESTestCase {
         for (int i = 0; i < NUM_TEST_RUNS; i++) {
             long nodeSize = randomLongBetween(ByteSizeValue.ofMb(500).getBytes(), ByteSizeValue.ofGb(64).getBytes());
             int percent = randomIntBetween(5, 200);
-            DiscoveryNode node = newNode(randomBoolean() ? null : randomNonNegativeLong(), nodeSize);
+            DiscoveryNode node = newNode(randomLongBetween(1, nodeSize / 2), nodeSize);
             Settings settings = newSettings(percent, false, ByteSizeValue.ofMb(randomIntBetween(0, 5000)));
             ClusterSettings clusterSettings = newClusterSettings(percent, false, ByteSizeValue.ofMb(randomIntBetween(0, 5000)));
 
-            long expected = (long) (nodeSize * (percent / 100.0));
+            long expected = nodeSize * percent / 100;
 
             assertThat(NativeMemoryCalculator.allowedBytesForMl(node, settings).getAsLong(), equalTo(expected));
             assertThat(NativeMemoryCalculator.allowedBytesForMl(node, clusterSettings).getAsLong(), equalTo(expected));
@@ -86,38 +85,40 @@ public class NativeMemoryCalculatorTests extends ESTestCase {
     }
 
     public void testConsistencyInAutoCalculation() {
-        for (Tuple<Long, Long> nodeAndJvmSize : AUTO_NODE_TIERS) {
-            final long trueJvmSize = nodeAndJvmSize.v2();
-            final long trueNodeSize = nodeAndJvmSize.v1();
-            List<Long> nodeSizes = Arrays.asList(
-                trueNodeSize + ByteSizeValue.ofMb(10).getBytes(),
-                trueNodeSize - ByteSizeValue.ofMb(10).getBytes(),
-                trueNodeSize
-            );
-            for (long nodeSize : nodeSizes) {
-                // Simulate having a true size that already exists from the node vs. us dynamically calculating it
-                long jvmSize = randomBoolean() ? dynamicallyCalculateJvmSizeFromNodeSize(nodeSize) : trueJvmSize;
-                DiscoveryNode node = newNode(jvmSize, nodeSize);
-                Settings settings = newSettings(30, true, ByteSizeValue.ZERO);
-                ClusterSettings clusterSettings = newClusterSettings(30, true, ByteSizeValue.ZERO);
-
-                long bytesForML = randomBoolean()
-                    ? NativeMemoryCalculator.allowedBytesForMl(node, settings).getAsLong()
-                    : NativeMemoryCalculator.allowedBytesForMl(node, clusterSettings).getAsLong();
-
-                NativeMemoryCapacity nativeMemoryCapacity = new NativeMemoryCapacity(bytesForML, bytesForML, jvmSize);
-
-                AutoscalingCapacity capacity = nativeMemoryCapacity.autoscalingCapacity(30, true);
-                // We don't allow node sizes below 1GB, so we will always be at least that large
-                // Also, allow 1 byte off for weird rounding issues
-                assertThat(
-                    capacity.node().memory().getBytes(),
-                    greaterThanOrEqualTo(Math.max(nodeSize, ByteSizeValue.ofGb(1).getBytes()) - 1L)
+        for (List<Tuple<Long, Long>> autoNodeTiers : List.of(AUTO_NODE_TIERS_NO_MONITORING, AUTO_NODE_TIERS_WITH_MONITORING)) {
+            for (Tuple<Long, Long> nodeAndJvmSize : autoNodeTiers) {
+                final long trueJvmSize = nodeAndJvmSize.v2();
+                final long trueNodeSize = nodeAndJvmSize.v1();
+                List<Long> nodeSizes = List.of(
+                    trueNodeSize + ByteSizeValue.ofMb(10).getBytes(),
+                    trueNodeSize - ByteSizeValue.ofMb(10).getBytes(),
+                    trueNodeSize
                 );
-                assertThat(
-                    capacity.total().memory().getBytes(),
-                    greaterThanOrEqualTo(Math.max(nodeSize, ByteSizeValue.ofGb(1).getBytes()) - 1L)
-                );
+                for (long nodeSize : nodeSizes) {
+                    // Simulate having a true size that already exists from the node vs. us dynamically calculating it
+                    long jvmSize = randomBoolean() ? dynamicallyCalculateJvmSizeFromNodeSize(nodeSize) : trueJvmSize;
+                    DiscoveryNode node = newNode(jvmSize, nodeSize);
+                    Settings settings = newSettings(30, true, ByteSizeValue.ZERO);
+                    ClusterSettings clusterSettings = newClusterSettings(30, true, ByteSizeValue.ZERO);
+
+                    long bytesForML = randomBoolean()
+                        ? NativeMemoryCalculator.allowedBytesForMl(node, settings).getAsLong()
+                        : NativeMemoryCalculator.allowedBytesForMl(node, clusterSettings).getAsLong();
+
+                    NativeMemoryCapacity nativeMemoryCapacity = new NativeMemoryCapacity(bytesForML, bytesForML, jvmSize);
+
+                    AutoscalingCapacity capacity = nativeMemoryCapacity.autoscalingCapacity(30, true, Long.MAX_VALUE, 1);
+                    // We don't allow node sizes below 1GB, so we will always be at least that large
+                    // Also, allow 1 byte off for weird rounding issues
+                    assertThat(
+                        capacity.node().memory().getBytes(),
+                        greaterThanOrEqualTo(Math.max(nodeSize, ByteSizeValue.ofGb(1).getBytes()) - 1L)
+                    );
+                    assertThat(
+                        capacity.total().memory().getBytes(),
+                        greaterThanOrEqualTo(Math.max(nodeSize, ByteSizeValue.ofGb(1).getBytes()) - 1L)
+                    );
+                }
             }
         }
     }
@@ -131,24 +132,12 @@ public class NativeMemoryCalculatorTests extends ESTestCase {
             Settings settings = newSettings(percent, true, ByteSizeValue.ofMb(randomIntBetween(0, 5000)));
             ClusterSettings clusterSettings = newClusterSettings(percent, true, ByteSizeValue.ofMb(randomIntBetween(0, 5000)));
 
-            double truePercent = Math.min(90, ((nodeSize - jvmSize - ByteSizeValue.ofMb(200).getBytes()) / (double) nodeSize) * 100.0D);
-            long expected = Math.round(nodeSize * (truePercent / 100.0));
+            long expected = Math.min(nodeSize - jvmSize - ByteSizeValue.ofMb(200).getBytes(), nodeSize * 9 / 10);
 
             assertThat(NativeMemoryCalculator.allowedBytesForMl(node, settings).getAsLong(), equalTo(expected));
             assertThat(NativeMemoryCalculator.allowedBytesForMl(node, clusterSettings).getAsLong(), equalTo(expected));
             assertThat(NativeMemoryCalculator.allowedBytesForMl(node, percent, true).getAsLong(), equalTo(expected));
         }
-    }
-
-    public void testAllowedBytesForMlWhenBothJVMAndNodeSizeAreUnknown() {
-        int percent = randomIntBetween(5, 200);
-        DiscoveryNode node = newNode(null, null);
-        Settings settings = newSettings(percent, randomBoolean(), ByteSizeValue.ofMb(randomIntBetween(0, 5000)));
-        ClusterSettings clusterSettings = newClusterSettings(percent, randomBoolean(), ByteSizeValue.ofMb(randomIntBetween(0, 5000)));
-
-        assertThat(NativeMemoryCalculator.allowedBytesForMl(node, settings), equalTo(OptionalLong.empty()));
-        assertThat(NativeMemoryCalculator.allowedBytesForMl(node, clusterSettings), equalTo(OptionalLong.empty()));
-        assertThat(NativeMemoryCalculator.allowedBytesForMl(node, percent, randomBoolean()), equalTo(OptionalLong.empty()));
     }
 
     public void testTinyNode() {
@@ -188,11 +177,11 @@ public class NativeMemoryCalculatorTests extends ESTestCase {
         final BiConsumer<Long, Integer> consistentManualAssertions = (nativeMemory, memoryPercentage) -> {
             assertThat(
                 NativeMemoryCalculator.calculateApproxNecessaryNodeSize(nativeMemory, null, memoryPercentage, false),
-                equalTo((long) ((100.0 / memoryPercentage) * nativeMemory))
+                equalTo((long) Math.ceil((100.0 / memoryPercentage) * nativeMemory))
             );
             assertThat(
                 NativeMemoryCalculator.calculateApproxNecessaryNodeSize(nativeMemory, randomNonNegativeLong(), memoryPercentage, false),
-                equalTo((long) ((100.0 / memoryPercentage) * nativeMemory))
+                equalTo((long) Math.ceil((100.0 / memoryPercentage) * nativeMemory))
             );
         };
 
@@ -460,7 +449,12 @@ public class NativeMemoryCalculatorTests extends ESTestCase {
                         nodeName,
                         nodeId,
                         ta,
-                        Collections.singletonMap(MachineLearning.MACHINE_MEMORY_NODE_ATTR, String.valueOf(mlMachineMemory)),
+                        Map.of(
+                            MachineLearning.MACHINE_MEMORY_NODE_ATTR,
+                            String.valueOf(mlMachineMemory),
+                            MAX_JVM_SIZE_NODE_ATTR,
+                            String.valueOf(mlMachineMemory / 20)
+                        ),
                         Set.of(DiscoveryNodeRole.ML_ROLE),
                         Version.CURRENT
                     )
@@ -495,16 +489,13 @@ public class NativeMemoryCalculatorTests extends ESTestCase {
         return new ClusterSettings(newSettings(maxMemoryPercent, useAuto, maxModelMemoryLimit), ML_MEMORY_RELATED_SETTINGS);
     }
 
-    private static DiscoveryNode newNode(Long jvmSizeLong, Long mlNodeSizeLong) {
-        String jvmSize = jvmSizeLong != null ? jvmSizeLong.toString() : null;
+    private static DiscoveryNode newNode(long jvmSizeLong, Long mlNodeSizeLong) {
         String mlNodeSize = mlNodeSizeLong != null ? mlNodeSizeLong.toString() : null;
         Map<String, String> attrs = new HashMap<>();
-        if (jvmSize != null) {
-            attrs.put(MAX_JVM_SIZE_NODE_ATTR, jvmSize);
-        }
         Set<DiscoveryNodeRole> roles;
         if (mlNodeSize != null) {
             attrs.put(MACHINE_MEMORY_NODE_ATTR, mlNodeSize);
+            attrs.put(MAX_JVM_SIZE_NODE_ATTR, Long.toString(jvmSizeLong));
             roles = Set.of(DiscoveryNodeRole.ML_ROLE);
         } else {
             roles = Set.of(DiscoveryNodeRole.MASTER_ROLE, DiscoveryNodeRole.DATA_ROLE, DiscoveryNodeRole.INGEST_ROLE);
